# gtk-weather

./: .aliases  .gitignore  CMakeLists.txt  README.md
src/: main.c  style.css  utils.c  utils.h
